--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
 	</properties>
 	
 		<dependencies>
-		      <dependency>
+			<dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
@@ -109,7 +109,11 @@
 			</resource>
 		</resources>
 		<plugins>
-
+			<plugin>
+				        <groupId>com.github.eirslett</groupId>
+				        <artifactId>frontend-maven-plugin</artifactId>
+					<version>LATEST_VERSION</version>
+			</plugin>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
