--- a/pom.xml
+++ b/pom.xml
@@ -43,15 +43,22 @@
 
 	</properties>
 	
+	<repositories>
+    <repository>
+        <id>sonatype</id>
+        <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+    </repository>
+</repositories>
+	
 <dependencies> 
 <!-- 			<dependency> -->
 <!--             <groupId>org.springframework.boot</groupId> -->
 <!--             <artifactId>spring-boot-starter-thymeleaf</artifactId> -->
 <!--         </dependency> -->
-<!--         <dependency> -->
-<!--             <groupId>org.springframework.boot</groupId> -->
-<!--             <artifactId>spring-boot-starter-data-jpa</artifactId> -->
-<!--         </dependency> -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-rest</artifactId>
@@ -70,7 +77,23 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+    <groupId>com.ripple.cryptoconditions</groupId>
+    <artifactId>crypto-conditions</artifactId>
+    <version>1.0.4</version>
+  </dependency>
+  
+  <dependency>
+    <groupId>org.bitcoinj</groupId>
+    <artifactId>bitcoinj-core</artifactId>
+    <version>0.15.10</version>
+</dependency>
 		
+		<dependency>
+    <groupId>com.h2database</groupId>
+    <artifactId>h2</artifactId>
+    <scope>runtime</scope>
+</dependency>
 		
 
 <dependency>
