--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,11 +1,16 @@
 server.servlet.context-path: /api
+spring.h2.console.enabled: true
 
 tracer:
     yearMin: 2021
     yearMax: 2024
     entity: UPV-I3M-GRyCAP
     version: ^project.version^
+    keypair:
+        private: /opt/bigchaindb_ed25519
+        public: /opt/bigchaindb_ed25519.pub
  
 blockchaindb:
-    baseUrl: http://asaserver.i3m.upv.es:9090/api/v1
-    transactionModePost: sync 
+    baseUrl: http://asaserver.i3m.upv.es:9984/api/v1
+    transactionModePost: sync
+    tmpHashDownFolder: /tmp/tracer/
