--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,12 @@
     <artifactId>bitcoinj-core</artifactId>
     <version>0.15.10</version>
 </dependency>
+
+<dependency>
+    <groupId>commons-io</groupId>
+    <artifactId>commons-io</artifactId>
+    <version>2.9.0</version>
+</dependency>
 		
 		<dependency>
     <groupId>com.h2database</groupId>
@@ -199,18 +205,6 @@
 					</excludes>
 					<trimStackTrace>false</trimStackTrace>
 				</configuration>
-				<dependencies>
-					<dependency>
-						<groupId>org.junit.platform</groupId>
-						<artifactId>junit-platform-surefire-provider</artifactId>
-						<version>${dep.ver.junit.platform-surefire-provider}</version>
-					</dependency>
-					<dependency>
-						<groupId>org.junit.jupiter</groupId>
-						<artifactId>junit-jupiter-engine</artifactId>
-						<version>${dep.ver.junit}</version>
-					</dependency>
-				</dependencies>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
