--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,16 +1,23 @@
 server.servlet.context-path: /api
-spring.h2.console.enabled: true
-
+spring.:
+    h2.console.enabled: true
+    datasource:
+        url: jdbc:h2:mem:testdb
+        driverClassName: org.h2.Driver
+        username: sa
+        password: password
+    jpa.database-platform: org.hibernate.dialect.H2Dialect
 tracer:
     yearMin: 2021
     yearMax: 2024
     entity: UPV-I3M-GRyCAP
     version: ^project.version^
     keypair:
-        private: /opt/bigchaindb_ed25519
-        public: /opt/bigchaindb_ed25519.pub
+        private: /tmp/ed25519
+        public: /tmp/ed25519.pub
  
 blockchaindb:
     baseUrl: http://asaserver.i3m.upv.es:9984/api/v1
     transactionModePost: sync
     tmpHashDownFolder: /tmp/tracer/
+    defaultAmountTransaction: 1
