--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,11 @@
   </dependency>
   
   <dependency>
+    <groupId>javax.validation</groupId>
+    <artifactId>validation-api</artifactId>
+</dependency>
+  
+  <dependency>
     <groupId>org.bitcoinj</groupId>
     <artifactId>bitcoinj-core</artifactId>
     <version>0.15.10</version>
