--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -8,6 +8,7 @@ spring.:
         password: password
     jpa.database-platform: org.hibernate.dialect.H2Dialect
 tracer:
+    hashAlgorithm: SHA3-256
     yearMin: 2021
     yearMax: 2024
     entity: UPV-I3M-GRyCAP
