--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,8 +1,9 @@
 server.servlet.context-path: /api
-spring.:
+server.port: 8090
+spring:
     h2.console.enabled: true
     datasource:
-        url: jdbc:h2:mem:testdb
+        url: jdbc:h2:file:~/tracer.db;DB_CLOSE_ON_EXIT=FALSE
         driverClassName: org.h2.Driver
         username: sa
         password: password
@@ -16,9 +17,9 @@ tracer:
     keypair:
         private: /tmp/ed25519
         public: /tmp/ed25519.pub
- 
+
 blockchaindb:
-    baseUrl: http://asaserver.i3m.upv.es:9984/api/v1
+    baseUrl: http://localhost:9984/api/v1
     transactionModePost: sync
     tmpHashDownFolder: /tmp/tracer/
     defaultAmountTransaction: 1
