--- a/pom.xml
+++ b/pom.xml
@@ -1,18 +1,20 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>es.upv.grycap</groupId>
-  <artifactId>tracer</artifactId>
-  <version>1.1.0</version>
-  <packaging>war</packaging>
-  <name>Traceability Service</name>
-  
-  	<!-- Inherit defaults from Spring Boot -->
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>es.upv.grycap</groupId>
+	<artifactId>tracer</artifactId>
+	<version>1.1.0</version>
+	<packaging>war</packaging>
+	<name>Traceability Service</name>
+
+	<!-- Inherit defaults from Spring Boot -->
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.5.5</version>
 	</parent>
-	
+
 	<properties>
 		<bundle.version>none</bundle.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -23,7 +25,7 @@
 		<maven.build.timestamp.format>yyMMdd.HHmm</maven.build.timestamp.format>
 
 
-        <dep.ver.lombok>1.18.16</dep.ver.lombok>
+		<dep.ver.lombok>1.18.16</dep.ver.lombok>
 		<dep.ver.powermock>1.7.4</dep.ver.powermock>
 		<dep.ver.junit>5.3.1</dep.ver.junit>
 		<dep.ver.junit.platform-surefire-provider>1.3.1</dep.ver.junit.platform-surefire-provider>
@@ -42,94 +44,124 @@
 		<v.org.apache.maven.plugins.maven-compiler-plugin>2.3.2</v.org.apache.maven.plugins.maven-compiler-plugin>
 
 	</properties>
-	
+
 	<repositories>
-    <repository>
-        <id>sonatype</id>
-        <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
-    </repository>
-</repositories>
-	
-<dependencies> 
-			<dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-thymeleaf</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
-        </dependency>
-                <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-security</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-rest</artifactId>
-        </dependency>	
+		<repository>
+			<id>sonatype snapshot</id>
+			<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+            <releases>
+              <enabled>true</enabled>
+            </releases>
+		</repository>
+        <repository>
+            <id>jfrog besu</id>
+            <url>https://hyperledger.jfrog.io/artifactory/besu-maven/</url>
+        </repository>
+        <repository>
+            <id>consensys</id>
+            <url>https://artifacts.consensys.net/public/maven/maven/</url>
+        </repository>
+        <repository>
+            <id>jfrog splunk</id>
+            <url>https://splunk.jfrog.io/splunk/ext-releases-local</url>
+        </repository>
+        <repository>
+            <id>cloudsmith</id>
+            <url>https://dl.cloudsmith.io/public/consensys/quorum-mainnet-launcher/maven/</url>
+        </repository>
+	</repositories>
+
+	<dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-rest</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-  <groupId>org.springframework.boot</groupId>
-  <artifactId>spring-boot-starter-validation</artifactId>
-</dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
 
-<dependency>
-    <groupId>org.junit.jupiter</groupId>
-    <artifactId>junit-jupiter-api</artifactId>
-    <scope>test</scope>
-</dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-api</artifactId>
+			<scope>test</scope>
+		</dependency>
 
-<dependency>
-    <groupId>org.keycloak</groupId>
-    <artifactId>keycloak-spring-boot-starter</artifactId>
-</dependency>
 		<dependency>
-    <groupId>com.ripple.cryptoconditions</groupId>
-    <artifactId>crypto-conditions</artifactId>
-    <version>1.0.4</version>
-  </dependency>
-  
-  
-  <dependency>
-    <groupId>org.bitcoinj</groupId>
-    <artifactId>bitcoinj-core</artifactId>
-    <version>0.15.10</version>
-</dependency>
+			<groupId>org.keycloak</groupId>
+			<artifactId>keycloak-spring-boot-starter</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.ripple.cryptoconditions</groupId>
+			<artifactId>crypto-conditions</artifactId>
+			<version>1.0.4</version>
+		</dependency>
 
-<dependency>
-    <groupId>commons-io</groupId>
-    <artifactId>commons-io</artifactId>
-    <version>2.9.0</version>
-</dependency>
-		
+
 		<dependency>
-    <groupId>com.h2database</groupId>
-    <artifactId>h2</artifactId>
-    <scope>runtime</scope>
-</dependency>
+			<groupId>org.bitcoinj</groupId>
+			<artifactId>bitcoinj-core</artifactId>
+			<version>0.15.10</version>
+		</dependency>
+
 		<dependency>
-    <groupId>org.projectlombok</groupId>
-    <artifactId>lombok</artifactId>
-    <scope>provided</scope>
-</dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.9.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.web3j</groupId>
+			<artifactId>core</artifactId>
+			<version>4.8.9</version>
+		</dependency>
+		<dependency>
+			<groupId>org.web3j</groupId>
+			<artifactId>web3j-unit</artifactId>
+			<version>4.8.9</version>
+		</dependency>
+	</dependencies>
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.keycloak.bom</groupId>
+				<artifactId>keycloak-adapter-bom</artifactId>
+				<version>15.0.2</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+
 
 		</dependencies>
-		<dependencyManagement>
-    <dependencies>
-        <dependency>
-            <groupId>org.keycloak.bom</groupId>
-            <artifactId>keycloak-adapter-bom</artifactId>
-            <version>15.0.2</version>
-            <type>pom</type>
-            <scope>import</scope>
-        </dependency>
-    </dependencies>
-</dependencyManagement>
-  <!-- Package as an executable jar -->
+	</dependencyManagement>
+	<!-- Package as an executable jar -->
 	<build>
 		<resources>
 
@@ -143,9 +175,9 @@
 		</resources>
 		<plugins>
 			<plugin>
-				        <groupId>com.github.eirslett</groupId>
-				        <artifactId>frontend-maven-plugin</artifactId>
-					<version>LATEST_VERSION</version>
+				<groupId>com.github.eirslett</groupId>
+				<artifactId>frontend-maven-plugin</artifactId>
+				<version>LATEST_VERSION</version>
 			</plugin>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
