--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -35,12 +35,15 @@ tracer:
     version: ^project.version^
 
 blockchain:
-    url: https://localhost:1443/ 
     # http://localhost:9984/api/v1
     tmpHashDownFolder: /tmp/tracer/
+    besu:
+        enabled: false
+        url: https://localhost:1443/ 
     bigchaindb:
+        enabled: true
+        url: https://asaserver.i3m.upv.es:9984/ 
         transactionModePost: sync
         defaultAmountTransaction: 1
-        keypair:
-            private: /tmp/ed25519
-            public: /tmp/ed25519.pub
+        keypairPrivate: /tmp/ed25519
+        keypairPublic: /tmp/ed25519.pub
