--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>es.upv.grycap</groupId>
 	<artifactId>tracer</artifactId>
-	<version>1.1.0</version>
+	<version>1.2.0</version>
 	<packaging>war</packaging>
 	<name>Traceability Service</name>
 
@@ -12,22 +12,18 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.5.5</version>
+		<version>2.6.3</version>
 	</parent>
 
 	<properties>
 		<bundle.version>none</bundle.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.source>11</maven.compiler.source>
-		<maven.compiler.target>11</maven.compiler.target>
-		<project.build>201215.1</project.build>
+		<maven.compiler.source>17</maven.compiler.source>
+		<maven.compiler.target>17</maven.compiler.target>
 		<timestamp>${maven.build.timestamp}</timestamp>
 		<maven.build.timestamp.format>yyMMdd.HHmm</maven.build.timestamp.format>
 
 
-		<dep.ver.lombok>1.18.16</dep.ver.lombok>
-		<dep.ver.powermock>1.7.4</dep.ver.powermock>
-		<dep.ver.junit>5.3.1</dep.ver.junit>
 		<dep.ver.junit.platform-surefire-provider>1.3.1</dep.ver.junit.platform-surefire-provider>
 		<dep.ver.org.apache.poi.poi-ooxml>3.17</dep.ver.org.apache.poi.poi-ooxml>
 
@@ -53,29 +49,29 @@
               <enabled>true</enabled>
             </releases>
 		</repository>
-        <repository>
-            <id>jfrog besu</id>
-            <url>https://hyperledger.jfrog.io/artifactory/besu-maven/</url>
-        </repository>
-        <repository>
-            <id>consensys</id>
-            <url>https://artifacts.consensys.net/public/maven/maven/</url>
-        </repository>
-        <repository>
-            <id>jfrog splunk</id>
-            <url>https://splunk.jfrog.io/splunk/ext-releases-local</url>
-        </repository>
-        <repository>
-            <id>cloudsmith</id>
-            <url>https://dl.cloudsmith.io/public/consensys/quorum-mainnet-launcher/maven/</url>
-        </repository>
+<!--         <repository> -->
+<!--             <id>jfrog besu</id> -->
+<!--             <url>https://hyperledger.jfrog.io/artifactory/besu-maven/</url> -->
+<!--         </repository> -->
+<!--         <repository> -->
+<!--             <id>consensys</id> -->
+<!--             <url>https://artifacts.consensys.net/public/maven/maven/</url> -->
+<!--         </repository> -->
+<!--         <repository> -->
+<!--             <id>jfrog splunk</id> -->
+<!--             <url>https://splunk.jfrog.io/splunk/ext-releases-local</url> -->
+<!--         </repository> -->
+<!--         <repository> -->
+<!--             <id>cloudsmith</id> -->
+<!--             <url>https://dl.cloudsmith.io/public/consensys/quorum-mainnet-launcher/maven/</url> -->
+<!--         </repository> -->
 	</repositories>
 
 	<dependencies>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-thymeleaf</artifactId>
-		</dependency>
+	<dependency>
+  <groupId>org.springframework.boot</groupId>
+  <artifactId>spring-boot-starter-hateoas</artifactId>
+</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -97,6 +93,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
+		<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-oauth2-client</artifactId>
+</dependency>
 
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
@@ -135,18 +135,17 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.web3j</groupId>
 			<artifactId>core</artifactId>
 			<version>4.8.9</version>
 		</dependency>
-		<dependency>
-			<groupId>org.web3j</groupId>
-			<artifactId>web3j-unit</artifactId>
-			<version>4.8.9</version>
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.web3j</groupId> -->
+<!-- 			<artifactId>web3j-unit</artifactId> -->
+<!-- 			<version>4.8.9</version> -->
+<!-- 		</dependency> -->
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
@@ -253,13 +252,6 @@
 				<configuration>
 					<source>${maven.compiler.source}</source>
 					<target>${maven.compiler.target}</target>
-					<annotationProcessorPaths>
-						<path>
-							<groupId>org.projectlombok</groupId>
-							<artifactId>lombok</artifactId>
-							<version>${dep.ver.lombok}</version>
-						</path>
-					</annotationProcessorPaths>
 				</configuration>
 			</plugin>
 			<plugin>
