--- a/k8s/webservice/webservice.yaml
+++ b/k8s/webservice/webservice.yaml
@@ -31,7 +31,7 @@ metadata:
 data:
   SPRING_PROFILES_ACTIVE: prod
   KEYCLOAK_AUTH_SERVER_URL: "https://keycloak.keycloak.svc.cluster.local/auth"
-  BLOCKCHAIN_URL: "https://bigchaindb-proxy-service.tracer-service.svc.cluster.local/api/v1"
+  BLOCKCHAIN_BIGCHAINDB_PRIVATE_URL: "https://bigchaindb-proxy-service.tracer-service.svc.cluster.local/api/v1"
   TRACER_ADMIN_NAME: "admin"
   TRACER_ADMIN_PASSWD: "change_me"
   TRACER_DISABLESSLVERIFICATION: "true"
@@ -39,8 +39,8 @@ data:
   SERVER_SSL_KEY_ALIAS: tracer-service
   SERVER_PORT: "8443"
   SERVER_SSL_KEY_STORE: "/opt/tracer/ssl/truststore/cert.p12"
-  BLOCKCHAIN_BIGCHAINDB_KEYPAIR_PRIVATE: "/data/webservice/blockchain/bigchaindb/keypair/ed25519"
-  BLOCKCHAIN_BIGCHAINDB_KEYPAIR_PUBLIC: "/data/webservice/blockchain/bigchaindb/keypair/ed25519.public"
+  BLOCKCHAIN_BIGCHAINDB_PRIVATE_KEYPAIRPRIVATE: "/data/webservice/blockchain/bigchaindb/keypair/ed25519"
+  BLOCKCHAIN_BIGCHAINDB_PRIVATE_KEYPAIRPUBLIC: "/data/webservice/blockchain/bigchaindb/keypair/ed25519.public"
   BLOCKCHAIN_TMPHASHDOWNFOLDER: "/data/webservice/blockchain/bigchaindb/tmp"
   KEY_DNAME: "CN=localhost,OU=I3M,O=UPV,L=VALENCIA,S=VALENCIA,C=ES"
   CERTS_FOLDER: /opt/tracer/ssl/authorized
@@ -79,8 +79,9 @@ spec:
         app: webservice
     spec:
       replicas: 1
+      priorityClassName: core-services
       containers:
-      - image: chaimeleon-eu.i3m.upv.es:10443/chaimeleon-services/tracer-web:1.0.0
+      - image: chaimeleon-eu.i3m.upv.es:10443/chaimeleon-services/tracer-web:1.2.0
         imagePullPolicy: Always
         name: webservice
         env:
@@ -94,11 +95,11 @@ spec:
                 configMapKeyRef:
                     name: webservice-config
                     key: KEYCLOAK_AUTH_SERVER_URL
-            - name: BLOCKCHAIN_URL
+            - name: BLOCKCHAIN_BIGCHAINDB_PRIVATE_URL
               valueFrom:
                 configMapKeyRef:
                     name: webservice-config
-                    key: BLOCKCHAIN_URL
+                    key: BLOCKCHAIN_BIGCHAINDB_PRIVATE_URL
             - name: TRACER_ADMIN_NAME
               valueFrom:
                 configMapKeyRef:
@@ -129,16 +130,16 @@ spec:
                 configMapKeyRef:
                     name: webservice-config
                     key: SERVER_PORT
-            - name: BLOCKCHAIN_BIGCHAINDB_KEYPAIR_PRIVATE
+            - name: BLOCKCHAIN_BIGCHAINDB_PRIVATE_KEYPAIRPRIVATE
               valueFrom:
                 configMapKeyRef:
                     name: webservice-config
-                    key: BLOCKCHAIN_BIGCHAINDB_KEYPAIR_PRIVATE
-            - name: BLOCKCHAIN_BIGCHAINDB_KEYPAIR_PUBLIC
+                    key: BLOCKCHAIN_BIGCHAINDB_PRIVATE_KEYPAIRPRIVATE
+            - name: BLOCKCHAIN_BIGCHAINDB_PRIVATE_KEYPAIRPUBLIC
               valueFrom:
                 configMapKeyRef:
                     name: webservice-config
-                    key: BLOCKCHAIN_BIGCHAINDB_KEYPAIR_PUBLIC
+                    key: BLOCKCHAIN_BIGCHAINDB_PRIVATE_KEYPAIRPUBLIC
             - name: BLOCKCHAIN_TMPHASHDOWNFOLDER
               valueFrom:
                 configMapKeyRef:
@@ -154,6 +155,13 @@ spec:
                 configMapKeyRef:
                   name: webservice-config
                   key: TRACER_DISABLESSLVERIFICATION
+        resources:
+          requests:
+            memory: "4Gi"
+            cpu: "1"
+          limits:
+            memory: "4Gi"
+            cpu: "1"
         ports:
         - containerPort: 8443
           name: api
