--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,5 +1,4 @@
 server:
-    servlet.context-path: /api
     port: 8090
     ssl:
         key-store-type: PKCS12
@@ -7,12 +6,17 @@ server:
         key-store-password: change_me_key
         key-alias: tracer-service
         enabled: true
+      
+logging.level.org.springframework.web:
+    filter.CommonsRequestLoggingFilter: DEBUG
+    reactive.function.client.ExchangeFunctions: DEBUG
 
 keycloak:
-    auth-server-url: "http://localhost:8080/auth"
+    auth-server-url: "https://asaserver.i3m.upv.es:20000/auth"
     realm: CHAIMELEON
     resource: tracer-service
     public-client: true
+    bearer-only: true
     
 spring:
     h2.console.enabled: true
@@ -22,28 +26,57 @@ spring:
         username: sa
         password: password
     jpa.database-platform: org.hibernate.dialect.H2Dialect
-    
+    security:
+        oauth2:
+            client:
+                registration:
+                    keycloak:
+                        client-id: tracer-service
+#                        client-secret: 
+                        authorization-grant-type: authorization_code
+                        redirect-uri: http://localhost:8090/api/v1
+                        scope: profile
+#                        realm: CHAIMELEON
+#                        public-client: true
+#                        provider: keycloak
+                provider:
+                    keycloak:
+                        authorization-uri: https://localhost:20000/auth/realms/CHAIMELEON/protocol/openid-connect/auth
+#                        jwk-set-uri:  https://localhost:20000/auth/realms/CHAIMELEON/protocol/openid-connect/certs
+#                        issuer-uri: https://localhost:20000/auth/realms/CHAIMELEON
+                        token-uri: https://localhost:20000/auth/realms/CHAIMELEON/protocol/openid-connect/token
+                        user-name-attribute: preferred_username
+                        
 tracer:
+    # in KB
+    request-parse-limit: 128 
     disableSSLVerification: false
     admin:
         name: admin
         password: change_me
     hashAlgorithm: SHA3-256
-    yearMin: 2021
-    yearMax: 2024
-    entity: UPV-I3M-GRyCAP
-    version: ^project.version^
+    info:
+        yearMin: 2021
+        yearMax: 2024
+        entity: "UPV-I3M-GRyCAP"
+        version: ^project.version^
+        name: "Tracer Web Service"
+        api:
+            v1:
+                traces: /api/v1/traces
 
 blockchain:
     # http://localhost:9984/api/v1
     tmpHashDownFolder: /tmp/tracer/
     besu:
-        enabled: false
-        url: https://localhost:1443/ 
+        private:
+            enabled: false
+            url: https://localhost:1443/ 
     bigchaindb:
-        enabled: true
-        url: https://asaserver.i3m.upv.es:9984/ 
-        transactionModePost: sync
-        defaultAmountTransaction: 1
-        keypairPrivate: /tmp/ed25519
-        keypairPublic: /tmp/ed25519.pub
+        private:
+            enabled: true
+            url: http://asaserver.i3m.upv.es:9984/api/v1
+            transactionModePost: sync
+            defaultAmountTransaction: 1
+            keypairPrivate: /tmp/ed25519
+            keypairPublic: /tmp/ed25519.pub
