--- a/pom.xml
+++ b/pom.xml
@@ -150,6 +150,7 @@
             <artifactId>core</artifactId>
             <version>${dep.ver.web3j}</version>
         </dependency>
+
         <!-- 		<dependency> -->
         <!-- 			<groupId>org.web3j</groupId> -->
         <!-- 			<artifactId>web3j-unit</artifactId> -->
@@ -165,6 +166,11 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+<dependency>
+    <groupId>com.squareup.okhttp3</groupId>
+    <artifactId>okhttp</artifactId>
+                <version>4.9.0</version>
+</dependency>
 
 
         </dependencies>
