--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,4 +1,4 @@
-base-dir: /tmp/tracer
+base-dir: ${HOME}/tmp/tracer
 
 server:
     port: 8090
@@ -86,13 +86,16 @@ blockchain:
         private:
             enabled: false
             name: "Besu Private"
-            url: https://localhost:1443/
+            url: http://127.0.0.1:38755/rpc
+            contract:
+                code: ""
+                deployed: ${base-dir}/besu/contract/chaimeleon_tracer_v1.json
             wallet:
                 password: eth-test
                 path: ${base-dir}/besu/wallet
     bigchaindb:
         private:
-            enabled: true
+            enabled: false
             name: "BigchainDB Private"
             url: http://asaserver.i3m.upv.es:9984/api/v1
             transactionModePost: commit
