--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>es.upv.grycap</groupId>
     <artifactId>tracer</artifactId>
-    <version>1.3.7</version>
+    <version>1.4.0</version>
     <packaging>war</packaging>
     <name>Traceability Service</name>
 
@@ -117,6 +117,13 @@
             <groupId>org.keycloak</groupId>
             <artifactId>keycloak-spring-boot-starter</artifactId>
         </dependency>
+        
+        <dependency>
+    <groupId>org.reflections</groupId>
+    <artifactId>reflections</artifactId>
+    <version>0.10.2</version>
+</dependency>
+        
         <dependency>
             <groupId>com.ripple.cryptoconditions</groupId>
             <artifactId>crypto-conditions</artifactId>
