Support for external time in Tracer and Besu fix #35 Return struct of Traces when searching for a value in the JSON string representation of a trace fix #36

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -70,6 +70,13 @@ tracer:
         name: admin
         password: change_me
     hashAlgorithm: SHA3-256
+    time:
+        useLocal: false
+        timeServers: 
+            - time-e-g.nist.gov
+            - time-a-g.nist.gov
+            - time-e-wwv.nist.gov
+        retries: 3
     info:
         yearMin: 2021
         yearMax: 2024
