--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,13 @@
         </dependency>
         
         <dependency>
+            <groupId>commons-net</groupId>
+            <artifactId>commons-net</artifactId>
+            <version>3.8.0</version>
+        </dependency>
+
+        
+        <dependency>
     <groupId>org.reflections</groupId>
     <artifactId>reflections</artifactId>
     <version>0.10.2</version>
