--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -122,7 +122,7 @@ blockchain:
         private:
             enabled: true
             name: "Besu Private"
-            url: http://asaserver.i3m.upv.es:8545
+            url: http://localhost:8545
             # in seconds, when the network is not reachable
             retryConnect: 20
             contracts:
