--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
         <maven.compiler.target>17</maven.compiler.target>
         <timestamp>${maven.build.timestamp}</timestamp>
         <maven.build.timestamp.format>yyMMdd.HHmm</maven.build.timestamp.format>
-        <solidity.version>0.7.6</solidity.version>
+        <solidity.version>0.8.17</solidity.version>
 
 
         <dep.ver.junit.platform-surefire-provider>1.3.1</dep.ver.junit.platform-surefire-provider>
@@ -192,12 +192,18 @@
     <!-- Package as an executable jar -->
     <build>
         <resources>
-
+            <resource>
+				<filtering>true</filtering>
+				<directory>src/main/resources</directory>
+				<includes>
+					<include>**/application*.yaml</include>
+				</includes>
+			</resource>
             <resource>
                 <filtering>false</filtering>
                 <directory>${project.basedir}/src/main/resources</directory>
                 <excludes>
-                    <exclude>**/application*.yml</exclude>
+                    <exclude>**/application*.yaml</exclude>
                 </excludes>
             </resource>
         </resources>
