disable local sdmin account (default)

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -88,7 +88,7 @@ tracer:
     admin:
         name: admin
         password: change_me
-        enabled: false
+        enabled: true
     hashAlgorithm: SHA3-256
     time:
         useLocal: true
