--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>es.upv.grycap</groupId>
     <artifactId>tracer</artifactId>
-    <version>1.5.2-BETA</version>
+    <version>1.5.3-BETA</version>
     <packaging>war</packaging>
     <name>Traceability Service</name>
 
@@ -103,6 +103,12 @@
             <artifactId>junit-jupiter-api</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <scope>test</scope>
+        </dependency>
+
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
@@ -208,46 +214,46 @@
             </resource>
         </resources>
         <plugins>
-            <plugin>
-                <groupId>org.web3j</groupId>
-                <artifactId>web3j-maven-plugin</artifactId>
-                <version>${dep.ver.web3j}</version>
-
-                <configuration>
-                    <packageName>es.upv.grycap.tracer.model.besu</packageName>
-                    <sourceDestination>src/main/java</sourceDestination>
-                    <nativeJavaType>true</nativeJavaType>
-                    <outputFormat>java,bin</outputFormat>
-                    <soliditySourceFiles>
-                        <directory>src/main/resources</directory>
-                        <includes>
-                            <include>**/*.sol</include>
-                        </includes>
-                    </soliditySourceFiles>
-                    <abiSourceFiles>
-                        <directory>src/main/resources</directory>
-                        <includes>
-                            <include>**/*.json</include>
-                        </includes>
-                    </abiSourceFiles>
-                    <outputDirectory>
-                        <java>src/main/java</java>
-                        <bin>src/bin/generated</bin>
-                        <abi>src/abi/generated</abi>
-                    </outputDirectory>
-                    <contract>
-                        <includes>
-                            <include>greeter</include>
-                        </includes>
-                        <excludes>
-                            <exclude>mortal</exclude>
-                        </excludes>
-                    </contract>
-                    <pathPrefixes>
-                        <pathPrefix>dep=../dependencies</pathPrefix>
-                    </pathPrefixes>
-                </configuration>
-            </plugin>
+<!--            <plugin>-->
+<!--                <groupId>org.web3j</groupId>-->
+<!--                <artifactId>web3j-maven-plugin</artifactId>-->
+<!--                <version>${dep.ver.web3j}</version>-->
+<!---->
+<!--                <configuration>-->
+<!--                    <packageName>es.upv.grycap.tracer.model.besu</packageName>-->
+<!--                    <sourceDestination>src/main/java</sourceDestination>-->
+<!--                    <nativeJavaType>true</nativeJavaType>-->
+<!--                    <outputFormat>java,bin</outputFormat>-->
+<!--                    <soliditySourceFiles>-->
+<!--                        <directory>src/main/resources</directory>-->
+<!--                        <includes>-->
+<!--                            <include>**/*.sol</include>-->
+<!--                        </includes>-->
+<!--                    </soliditySourceFiles>-->
+<!--                    <abiSourceFiles>-->
+<!--                        <directory>src/main/resources</directory>-->
+<!--                        <includes>-->
+<!--                            <include>**/*.json</include>-->
+<!--                        </includes>-->
+<!--                    </abiSourceFiles>-->
+<!--                    <outputDirectory>-->
+<!--                        <java>src/main/java</java>-->
+<!--                        <bin>src/bin/generated</bin>-->
+<!--                        <abi>src/abi/generated</abi>-->
+<!--                    </outputDirectory>-->
+<!--                    <contract>-->
+<!--                        <includes>-->
+<!--                            <include>greeter</include>-->
+<!--                        </includes>-->
+<!--                        <excludes>-->
+<!--                            <exclude>mortal</exclude>-->
+<!--                        </excludes>-->
+<!--                    </contract>-->
+<!--                    <pathPrefixes>-->
+<!--                        <pathPrefix>dep=../dependencies</pathPrefix>-->
+<!--                    </pathPrefixes>-->
+<!--                </configuration>-->
+<!--            </plugin>-->
             <plugin>
                 <groupId>com.github.eirslett</groupId>
                 <artifactId>frontend-maven-plugin</artifactId>
