--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -132,6 +132,7 @@ blockchain:
             defaultLimit: 5
             # in seconds, when the network is not reachable
             retryConnect: 20
+            getTracesPageSize: 200
             contracts:
                 - name: ChaimeleonTracer_V1
                   enable: 
